# scfetch

./: .gitignore  LICENSE  README.md  publish-and-commit.sh  pyproject.toml
scfetch/: __main__.py  arch.py  ascii.py  battery.py  config.py  cpu.py  de_wm.py  disk_usage.py  gpu.py  kernel_ver.py  locale_info.py  mac.py  machine_name.py  os_info.py  pc.py  private_ip.py  public_ip.py  python_version.py  ram.py  screen_resolution.py  shell.py  uptime.py
