[project]
name = "scfetch"
version = "2.0.1"
description = "minimal fetch program for windows, linux and macos"
authors = [
    { name = "sctech", email = "gamerselimiko@gmail.com" }
]
dependencies = [
    "colorist",
    "psutil",
    "screeninfo",
    "requests",
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Operating System",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
readme = "README.md"
urls = { source = "https://github.com/sctech-tr/scfetch" }

[project.scripts]
scfetch = "scfetch.__main__:main"

[tool.setuptools]
packages = ["scfetch"]
include-package-data = true

[tool.setuptools.package-data]
"scfetch" = ["data/*.json", "config/*.ini"]
